changed the datatypes

--- a/UFO_sightings_to_SQL.ipynb
+++ b/UFO_sightings_to_SQL.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b5a29ae0",
+   "execution_count": 1,
+   "id": "5142159c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "725a98e2",
+   "execution_count": 2,
+   "id": "3a8d0b80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "803fa855",
+   "execution_count": 3,
+   "id": "54005555",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sighting']"
+       "['sightings']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3ea8a0c8",
+   "execution_count": 4,
+   "id": "243b023f",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7/31/22 21:59</td>\n",
+       "      <td>2022-07-31 21:59:00</td>\n",
        "      <td>West Lafayette</td>\n",
        "      <td>OH</td>\n",
        "      <td>USA</td>\n",
@@ -109,7 +109,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7/31/22 21:45</td>\n",
+       "      <td>2022-07-31 21:45:00</td>\n",
        "      <td>Burr Ridge</td>\n",
        "      <td>IL</td>\n",
        "      <td>USA</td>\n",
@@ -125,7 +125,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7/31/22 21:15</td>\n",
+       "      <td>2022-07-31 21:15:00</td>\n",
        "      <td>Conway</td>\n",
        "      <td>SC</td>\n",
        "      <td>USA</td>\n",
@@ -141,7 +141,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7/31/22 21:11</td>\n",
+       "      <td>2022-07-31 21:11:00</td>\n",
        "      <td>Keyser</td>\n",
        "      <td>WV</td>\n",
        "      <td>USA</td>\n",
@@ -157,7 +157,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7/31/22 20:43</td>\n",
+       "      <td>2022-07-31 20:43:00</td>\n",
        "      <td>gressham</td>\n",
        "      <td>OR</td>\n",
        "      <td>USA</td>\n",
@@ -189,7 +189,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2055</th>\n",
-       "      <td>12/1/22 18:10</td>\n",
+       "      <td>2022-12-01 18:10:00</td>\n",
        "      <td>Blakeslee</td>\n",
        "      <td>OH</td>\n",
        "      <td>USA</td>\n",
@@ -205,7 +205,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2056</th>\n",
-       "      <td>12/1/22 18:00</td>\n",
+       "      <td>2022-12-01 18:00:00</td>\n",
        "      <td>Snowflake</td>\n",
        "      <td>AZ</td>\n",
        "      <td>USA</td>\n",
@@ -221,7 +221,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2057</th>\n",
-       "      <td>12/1/22 14:10</td>\n",
+       "      <td>2022-12-01 14:10:00</td>\n",
        "      <td>El paso</td>\n",
        "      <td>TX</td>\n",
        "      <td>USA</td>\n",
@@ -237,7 +237,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2058</th>\n",
-       "      <td>12/1/22 06:20</td>\n",
+       "      <td>2022-12-01 06:20:00</td>\n",
        "      <td>CHARLESTOWN</td>\n",
        "      <td>IN</td>\n",
        "      <td>USA</td>\n",
@@ -253,7 +253,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2059</th>\n",
-       "      <td>12/1/22 03:59</td>\n",
+       "      <td>2022-12-01 03:59:00</td>\n",
        "      <td>Mansfield</td>\n",
        "      <td>TX</td>\n",
        "      <td>USA</td>\n",
@@ -273,18 +273,18 @@
        "</div>"
       ],
       "text/plain": [
-       "               date            city state country     shape  \\\n",
-       "0     7/31/22 21:59  West Lafayette    OH     USA     Light   \n",
-       "1     7/31/22 21:45      Burr Ridge    IL     USA     Other   \n",
-       "2     7/31/22 21:15          Conway    SC     USA    Circle   \n",
-       "3     7/31/22 21:11          Keyser    WV     USA     Light   \n",
-       "4     7/31/22 20:43        gressham    OR     USA   Unknown   \n",
-       "...             ...             ...   ...     ...       ...   \n",
-       "2055  12/1/22 18:10       Blakeslee    OH     USA    Sphere   \n",
-       "2056  12/1/22 18:00       Snowflake    AZ     USA  Triangle   \n",
-       "2057  12/1/22 14:10         El paso    TX     USA      Oval   \n",
-       "2058  12/1/22 06:20     CHARLESTOWN    IN     USA     Light   \n",
-       "2059  12/1/22 03:59       Mansfield    TX     USA  Changing   \n",
+       "                    date            city state country     shape  \\\n",
+       "0    2022-07-31 21:59:00  West Lafayette    OH     USA     Light   \n",
+       "1    2022-07-31 21:45:00      Burr Ridge    IL     USA     Other   \n",
+       "2    2022-07-31 21:15:00          Conway    SC     USA    Circle   \n",
+       "3    2022-07-31 21:11:00          Keyser    WV     USA     Light   \n",
+       "4    2022-07-31 20:43:00        gressham    OR     USA   Unknown   \n",
+       "...                  ...             ...   ...     ...       ...   \n",
+       "2055 2022-12-01 18:10:00       Blakeslee    OH     USA    Sphere   \n",
+       "2056 2022-12-01 18:00:00       Snowflake    AZ     USA  Triangle   \n",
+       "2057 2022-12-01 14:10:00         El paso    TX     USA      Oval   \n",
+       "2058 2022-12-01 06:20:00     CHARLESTOWN    IN     USA     Light   \n",
+       "2059 2022-12-01 03:59:00       Mansfield    TX     USA  Changing   \n",
        "\n",
        "                duration                                            summary  \\\n",
        "0              4 minutes            Bright circle light moving through sky.   \n",
@@ -315,20 +315,20 @@
        "[2060 rows x 13 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sighting = pd.read_sql(\"SELECT * FROM sighting\",connection)\n",
+    "sighting = pd.read_sql(\"SELECT * FROM sightings\",connection)\n",
     "sighting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3177a539",
+   "id": "9adf0dfa",
    "metadata": {},
    "outputs": [],
    "source": []
