--- a/UFO_sightings_to_SQL.ipynb
+++ b/UFO_sightings_to_SQL.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5142159c",
+   "execution_count": 5,
+   "id": "5ac5ce6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3a8d0b80",
+   "execution_count": 6,
+   "id": "edc6a78e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "54005555",
+   "execution_count": 7,
+   "id": "3065c4c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sightings']"
+       "['sighting']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "243b023f",
+   "execution_count": 8,
+   "id": "cb25960c",
    "metadata": {},
    "outputs": [
     {
@@ -91,244 +91,30 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-07-31 21:59:00</td>\n",
-       "      <td>West Lafayette</td>\n",
-       "      <td>OH</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>4 minutes</td>\n",
-       "      <td>Bright circle light moving through sky.</td>\n",
-       "      <td>2022-09-09</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1</td>\n",
-       "      <td>West Lafayette, OH</td>\n",
-       "      <td>40.275349</td>\n",
-       "      <td>-81.750960</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-07-31 21:45:00</td>\n",
-       "      <td>Burr Ridge</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Strange red, blue and black craft in the sky a...</td>\n",
-       "      <td>2022-09-09</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Burr Ridge, IL</td>\n",
-       "      <td>41.748920</td>\n",
-       "      <td>-87.918392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-07-31 21:15:00</td>\n",
-       "      <td>Conway</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Circle</td>\n",
-       "      <td>Less than a minute</td>\n",
-       "      <td>Round bright white light go in a straight line...</td>\n",
-       "      <td>2022-09-09</td>\n",
-       "      <td>None</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Conway, SC</td>\n",
-       "      <td>33.836003</td>\n",
-       "      <td>-79.047814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-07-31 21:11:00</td>\n",
-       "      <td>Keyser</td>\n",
-       "      <td>WV</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>2 minutes</td>\n",
-       "      <td>Saw an orb that interacted with me.</td>\n",
-       "      <td>2022-09-09</td>\n",
-       "      <td>None</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Keyser, WV</td>\n",
-       "      <td>39.440928</td>\n",
-       "      <td>-78.973916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-07-31 20:43:00</td>\n",
-       "      <td>gressham</td>\n",
-       "      <td>OR</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>less than a minute</td>\n",
-       "      <td>A single soft red light that pulsed three time...</td>\n",
-       "      <td>2022-09-09</td>\n",
-       "      <td>None</td>\n",
-       "      <td>5</td>\n",
-       "      <td>gressham, OR</td>\n",
-       "      <td>45.504472</td>\n",
-       "      <td>-122.435666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2055</th>\n",
-       "      <td>2022-12-01 18:10:00</td>\n",
-       "      <td>Blakeslee</td>\n",
-       "      <td>OH</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Sphere</td>\n",
-       "      <td>5 minutes</td>\n",
-       "      <td>Bright spherical object moving linear west to ...</td>\n",
-       "      <td>2022-12-22</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2126</td>\n",
-       "      <td>Blakeslee, OH</td>\n",
-       "      <td>41.524217</td>\n",
-       "      <td>-84.730233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2056</th>\n",
-       "      <td>2022-12-01 18:00:00</td>\n",
-       "      <td>Snowflake</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Triangle</td>\n",
-       "      <td>2 minutes</td>\n",
-       "      <td>I grew up on a 40 acre parcel of land with thr...</td>\n",
-       "      <td>2022-12-22</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2127</td>\n",
-       "      <td>Snowflake, AZ</td>\n",
-       "      <td>34.513370</td>\n",
-       "      <td>-110.078449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2057</th>\n",
-       "      <td>2022-12-01 14:10:00</td>\n",
-       "      <td>El paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Oval</td>\n",
-       "      <td>Ten minutes</td>\n",
-       "      <td>It appeared out of nowhere &amp; slowly moved acro...</td>\n",
-       "      <td>2022-12-22</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2129</td>\n",
-       "      <td>El paso, TX</td>\n",
-       "      <td>31.761878</td>\n",
-       "      <td>-106.485022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2058</th>\n",
-       "      <td>2022-12-01 06:20:00</td>\n",
-       "      <td>CHARLESTOWN</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>2 to 3 minutes</td>\n",
-       "      <td>Bright object was seen arriving and silently h...</td>\n",
-       "      <td>2022-12-22</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2130</td>\n",
-       "      <td>CHARLESTOWN, IN</td>\n",
-       "      <td>38.453120</td>\n",
-       "      <td>-85.670241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2059</th>\n",
-       "      <td>2022-12-01 03:59:00</td>\n",
-       "      <td>Mansfield</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Changing</td>\n",
-       "      <td>60 seconds</td>\n",
-       "      <td>Looked like a drone but moved way too fast the...</td>\n",
-       "      <td>2022-12-22</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2131</td>\n",
-       "      <td>Mansfield, TX</td>\n",
-       "      <td>32.563192</td>\n",
-       "      <td>-97.141677</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2060 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    date            city state country     shape  \\\n",
-       "0    2022-07-31 21:59:00  West Lafayette    OH     USA     Light   \n",
-       "1    2022-07-31 21:45:00      Burr Ridge    IL     USA     Other   \n",
-       "2    2022-07-31 21:15:00          Conway    SC     USA    Circle   \n",
-       "3    2022-07-31 21:11:00          Keyser    WV     USA     Light   \n",
-       "4    2022-07-31 20:43:00        gressham    OR     USA   Unknown   \n",
-       "...                  ...             ...   ...     ...       ...   \n",
-       "2055 2022-12-01 18:10:00       Blakeslee    OH     USA    Sphere   \n",
-       "2056 2022-12-01 18:00:00       Snowflake    AZ     USA  Triangle   \n",
-       "2057 2022-12-01 14:10:00         El paso    TX     USA      Oval   \n",
-       "2058 2022-12-01 06:20:00     CHARLESTOWN    IN     USA     Light   \n",
-       "2059 2022-12-01 03:59:00       Mansfield    TX     USA  Changing   \n",
-       "\n",
-       "                duration                                            summary  \\\n",
-       "0              4 minutes            Bright circle light moving through sky.   \n",
-       "1                   None  Strange red, blue and black craft in the sky a...   \n",
-       "2     Less than a minute  Round bright white light go in a straight line...   \n",
-       "3              2 minutes                Saw an orb that interacted with me.   \n",
-       "4     less than a minute  A single soft red light that pulsed three time...   \n",
-       "...                  ...                                                ...   \n",
-       "2055           5 minutes  Bright spherical object moving linear west to ...   \n",
-       "2056           2 minutes  I grew up on a 40 acre parcel of land with thr...   \n",
-       "2057         Ten minutes  It appeared out of nowhere & slowly moved acro...   \n",
-       "2058      2 to 3 minutes  Bright object was seen arriving and silently h...   \n",
-       "2059          60 seconds  Looked like a drone but moved way too fast the...   \n",
-       "\n",
-       "          posted images  reportnum            location   latitude   longitude  \n",
-       "0     2022-09-09    Yes          1  West Lafayette, OH  40.275349  -81.750960  \n",
-       "1     2022-09-09    Yes          2      Burr Ridge, IL  41.748920  -87.918392  \n",
-       "2     2022-09-09   None          3          Conway, SC  33.836003  -79.047814  \n",
-       "3     2022-09-09   None          4          Keyser, WV  39.440928  -78.973916  \n",
-       "4     2022-09-09   None          5        gressham, OR  45.504472 -122.435666  \n",
-       "...          ...    ...        ...                 ...        ...         ...  \n",
-       "2055  2022-12-22    Yes       2126       Blakeslee, OH  41.524217  -84.730233  \n",
-       "2056  2022-12-22   None       2127       Snowflake, AZ  34.513370 -110.078449  \n",
-       "2057  2022-12-22   None       2129         El paso, TX  31.761878 -106.485022  \n",
-       "2058  2022-12-22    Yes       2130     CHARLESTOWN, IN  38.453120  -85.670241  \n",
-       "2059  2022-12-22   None       2131       Mansfield, TX  32.563192  -97.141677  \n",
-       "\n",
-       "[2060 rows x 13 columns]"
+       "Empty DataFrame\n",
+       "Columns: [date, city, state, country, shape, duration, summary, posted, images, reportnum, location, latitude, longitude]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sighting = pd.read_sql(\"SELECT * FROM sightings\",connection)\n",
+    "sighting = pd.read_sql(\"SELECT * FROM sighting\",connection)\n",
     "sighting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9adf0dfa",
+   "id": "289fe0a5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -350,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7 (default, May  6 2020, 04:59:01) \n[Clang 4.0.1 (tags/RELEASE_401/final)]"
   }
  },
  "nbformat": 4,
