--- a/UFO_sightings_to_SQL.ipynb
+++ b/UFO_sightings_to_SQL.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "sighting = pd.read_sql(\"SELECT * FROM sightings\",connection)\n",
+    "sighting = pd.read_sql(\"SELECT * FROM sighting\",connection)\n",
     "sighting"
    ]
   },
