update to sightings state and add sightings monthly

--- a/Data/Sightings_State.ipynb
+++ b/Data/Sightings_State.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3c0febfd",
+   "execution_count": 1,
+   "id": "127d4a34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "eba02e16",
+   "execution_count": 2,
+   "id": "0c496fed",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[2060 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,11 +291,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4922f9c",
+   "execution_count": 14,
+   "id": "370c1515",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State\n",
+       "AK                  3\n",
+       "AL                 28\n",
+       "AR                 18\n",
+       "AZ                 64\n",
+       "American Samoa      1\n",
+       "CA                203\n",
+       "CO                 58\n",
+       "CT                 35\n",
+       "DC                  3\n",
+       "DE                 11\n",
+       "FL                152\n",
+       "GA                 35\n",
+       "HI                  5\n",
+       "IA                 14\n",
+       "ID                 24\n",
+       "IL                 58\n",
+       "IN                 38\n",
+       "KS                 12\n",
+       "KY                 27\n",
+       "LA                 21\n",
+       "MA                 53\n",
+       "MD                 31\n",
+       "ME                 25\n",
+       "MI                 50\n",
+       "MN                 33\n",
+       "MO                 42\n",
+       "MS                 12\n",
+       "MT                 18\n",
+       "NC                 67\n",
+       "ND                  2\n",
+       "NE                  8\n",
+       "NH                 24\n",
+       "NJ                 54\n",
+       "NM                 27\n",
+       "NV                 26\n",
+       "NY                103\n",
+       "OH                 75\n",
+       "OK                 26\n",
+       "ON                  1\n",
+       "OR                 51\n",
+       "PA                113\n",
+       "RI                 12\n",
+       "SC                 30\n",
+       "SD                  6\n",
+       "TN                 37\n",
+       "TX                 89\n",
+       "UT                 22\n",
+       "VA                 42\n",
+       "VT                 16\n",
+       "WA                 82\n",
+       "WI                 49\n",
+       "WV                 14\n",
+       "WY                 10\n",
+       "Name: City, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo_state = ufo_data.groupby('State').count()['City']\n",
+    "ufo_state"
+   ]
   }
  ],
  "metadata": {
