remove american samoa

--- a/Data/Sightings_State.ipynb
+++ b/Data/Sightings_State.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "127d4a34",
+   "id": "c470a5ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0c496fed",
+   "id": "df2349a3",
    "metadata": {},
    "outputs": [
     {
@@ -291,71 +291,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "370c1515",
+   "execution_count": 19,
+   "id": "14dd2ab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Posted</th>\n",
+       "      <th>Images</th>\n",
+       "      <th>ReportNum</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-07-31 21:59:00</td>\n",
+       "      <td>West Lafayette</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>4 minutes</td>\n",
+       "      <td>Bright circle light moving through sky.</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>West Lafayette, OH</td>\n",
+       "      <td>40.275349</td>\n",
+       "      <td>-81.750960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-07-31 21:45:00</td>\n",
+       "      <td>Burr Ridge</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strange red, blue and black craft in the sky a...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Burr Ridge, IL</td>\n",
+       "      <td>41.748920</td>\n",
+       "      <td>-87.918392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-07-31 21:15:00</td>\n",
+       "      <td>Conway</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Circle</td>\n",
+       "      <td>Less than a minute</td>\n",
+       "      <td>Round bright white light go in a straight line...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Conway, SC</td>\n",
+       "      <td>33.836003</td>\n",
+       "      <td>-79.047814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-07-31 21:11:00</td>\n",
+       "      <td>Keyser</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>2 minutes</td>\n",
+       "      <td>Saw an orb that interacted with me.</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Keyser, WV</td>\n",
+       "      <td>39.440928</td>\n",
+       "      <td>-78.973916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-07-31 20:43:00</td>\n",
+       "      <td>gressham</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>less than a minute</td>\n",
+       "      <td>A single soft red light that pulsed three time...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>gressham, OR</td>\n",
+       "      <td>45.504472</td>\n",
+       "      <td>-122.435666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2055</th>\n",
+       "      <td>2022-12-01 18:10:00</td>\n",
+       "      <td>Blakeslee</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Sphere</td>\n",
+       "      <td>5 minutes</td>\n",
+       "      <td>Bright spherical object moving linear west to ...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2126</td>\n",
+       "      <td>Blakeslee, OH</td>\n",
+       "      <td>41.524217</td>\n",
+       "      <td>-84.730233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2056</th>\n",
+       "      <td>2022-12-01 18:00:00</td>\n",
+       "      <td>Snowflake</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Triangle</td>\n",
+       "      <td>2 minutes</td>\n",
+       "      <td>I grew up on a 40 acre parcel of land with thr...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2127</td>\n",
+       "      <td>Snowflake, AZ</td>\n",
+       "      <td>34.513370</td>\n",
+       "      <td>-110.078449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2057</th>\n",
+       "      <td>2022-12-01 14:10:00</td>\n",
+       "      <td>El paso</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Oval</td>\n",
+       "      <td>Ten minutes</td>\n",
+       "      <td>It appeared out of nowhere &amp; slowly moved acro...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2129</td>\n",
+       "      <td>El paso, TX</td>\n",
+       "      <td>31.761878</td>\n",
+       "      <td>-106.485022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2058</th>\n",
+       "      <td>2022-12-01 06:20:00</td>\n",
+       "      <td>CHARLESTOWN</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>2 to 3 minutes</td>\n",
+       "      <td>Bright object was seen arriving and silently h...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2130</td>\n",
+       "      <td>CHARLESTOWN, IN</td>\n",
+       "      <td>38.453120</td>\n",
+       "      <td>-85.670241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2059</th>\n",
+       "      <td>2022-12-01 03:59:00</td>\n",
+       "      <td>Mansfield</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Changing</td>\n",
+       "      <td>60 seconds</td>\n",
+       "      <td>Looked like a drone but moved way too fast the...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2131</td>\n",
+       "      <td>Mansfield, TX</td>\n",
+       "      <td>32.563192</td>\n",
+       "      <td>-97.141677</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2059 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Date            City State Country     Shape  \\\n",
+       "0     2022-07-31 21:59:00  West Lafayette    OH     USA     Light   \n",
+       "1     2022-07-31 21:45:00      Burr Ridge    IL     USA     Other   \n",
+       "2     2022-07-31 21:15:00          Conway    SC     USA    Circle   \n",
+       "3     2022-07-31 21:11:00          Keyser    WV     USA     Light   \n",
+       "4     2022-07-31 20:43:00        gressham    OR     USA   Unknown   \n",
+       "...                   ...             ...   ...     ...       ...   \n",
+       "2055  2022-12-01 18:10:00       Blakeslee    OH     USA    Sphere   \n",
+       "2056  2022-12-01 18:00:00       Snowflake    AZ     USA  Triangle   \n",
+       "2057  2022-12-01 14:10:00         El paso    TX     USA      Oval   \n",
+       "2058  2022-12-01 06:20:00     CHARLESTOWN    IN     USA     Light   \n",
+       "2059  2022-12-01 03:59:00       Mansfield    TX     USA  Changing   \n",
+       "\n",
+       "                Duration                                            Summary  \\\n",
+       "0              4 minutes            Bright circle light moving through sky.   \n",
+       "1                    NaN  Strange red, blue and black craft in the sky a...   \n",
+       "2     Less than a minute  Round bright white light go in a straight line...   \n",
+       "3              2 minutes                Saw an orb that interacted with me.   \n",
+       "4     less than a minute  A single soft red light that pulsed three time...   \n",
+       "...                  ...                                                ...   \n",
+       "2055           5 minutes  Bright spherical object moving linear west to ...   \n",
+       "2056           2 minutes  I grew up on a 40 acre parcel of land with thr...   \n",
+       "2057         Ten minutes  It appeared out of nowhere & slowly moved acro...   \n",
+       "2058      2 to 3 minutes  Bright object was seen arriving and silently h...   \n",
+       "2059          60 seconds  Looked like a drone but moved way too fast the...   \n",
+       "\n",
+       "        Posted Images  ReportNum            Location   Latitude   Longitude  \n",
+       "0       9/9/22    Yes          1  West Lafayette, OH  40.275349  -81.750960  \n",
+       "1       9/9/22    Yes          2      Burr Ridge, IL  41.748920  -87.918392  \n",
+       "2       9/9/22    NaN          3          Conway, SC  33.836003  -79.047814  \n",
+       "3       9/9/22    NaN          4          Keyser, WV  39.440928  -78.973916  \n",
+       "4       9/9/22    NaN          5        gressham, OR  45.504472 -122.435666  \n",
+       "...        ...    ...        ...                 ...        ...         ...  \n",
+       "2055  12/22/22    Yes       2126       Blakeslee, OH  41.524217  -84.730233  \n",
+       "2056  12/22/22    NaN       2127       Snowflake, AZ  34.513370 -110.078449  \n",
+       "2057  12/22/22    NaN       2129         El paso, TX  31.761878 -106.485022  \n",
+       "2058  12/22/22    Yes       2130     CHARLESTOWN, IN  38.453120  -85.670241  \n",
+       "2059  12/22/22    NaN       2131       Mansfield, TX  32.563192  -97.141677  \n",
+       "\n",
+       "[2059 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo_data = ufo_data.drop(ufo_data[ufo_data['State'] == \"American Samoa\"].index)\n",
+    "ufo_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b6329b2b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "State\n",
-       "AK                  3\n",
-       "AL                 28\n",
-       "AR                 18\n",
-       "AZ                 64\n",
-       "American Samoa      1\n",
-       "CA                203\n",
-       "CO                 58\n",
-       "CT                 35\n",
-       "DC                  3\n",
-       "DE                 11\n",
-       "FL                152\n",
-       "GA                 35\n",
-       "HI                  5\n",
-       "IA                 14\n",
-       "ID                 24\n",
-       "IL                 58\n",
-       "IN                 38\n",
-       "KS                 12\n",
-       "KY                 27\n",
-       "LA                 21\n",
-       "MA                 53\n",
-       "MD                 31\n",
-       "ME                 25\n",
-       "MI                 50\n",
-       "MN                 33\n",
-       "MO                 42\n",
-       "MS                 12\n",
-       "MT                 18\n",
-       "NC                 67\n",
-       "ND                  2\n",
-       "NE                  8\n",
-       "NH                 24\n",
-       "NJ                 54\n",
-       "NM                 27\n",
-       "NV                 26\n",
-       "NY                103\n",
-       "OH                 75\n",
-       "OK                 26\n",
-       "ON                  1\n",
-       "OR                 51\n",
-       "PA                113\n",
-       "RI                 12\n",
-       "SC                 30\n",
-       "SD                  6\n",
-       "TN                 37\n",
-       "TX                 89\n",
-       "UT                 22\n",
-       "VA                 42\n",
-       "VT                 16\n",
-       "WA                 82\n",
-       "WI                 49\n",
-       "WV                 14\n",
-       "WY                 10\n",
+       "AK      3\n",
+       "AL     28\n",
+       "AR     18\n",
+       "AZ     64\n",
+       "CA    203\n",
+       "CO     58\n",
+       "CT     35\n",
+       "DC      3\n",
+       "DE     11\n",
+       "FL    152\n",
+       "GA     35\n",
+       "HI      5\n",
+       "IA     14\n",
+       "ID     24\n",
+       "IL     58\n",
+       "IN     38\n",
+       "KS     12\n",
+       "KY     27\n",
+       "LA     21\n",
+       "MA     53\n",
+       "MD     31\n",
+       "ME     25\n",
+       "MI     50\n",
+       "MN     33\n",
+       "MO     42\n",
+       "MS     12\n",
+       "MT     18\n",
+       "NC     67\n",
+       "ND      2\n",
+       "NE      8\n",
+       "NH     24\n",
+       "NJ     54\n",
+       "NM     27\n",
+       "NV     26\n",
+       "NY    103\n",
+       "OH     75\n",
+       "OK     26\n",
+       "ON      1\n",
+       "OR     51\n",
+       "PA    113\n",
+       "RI     12\n",
+       "SC     30\n",
+       "SD      6\n",
+       "TN     37\n",
+       "TX     89\n",
+       "UT     22\n",
+       "VA     42\n",
+       "VT     16\n",
+       "WA     82\n",
+       "WI     49\n",
+       "WV     14\n",
+       "WY     10\n",
        "Name: City, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
