state sightings update

--- a/Data/Sightings_State.ipynb
+++ b/Data/Sightings_State.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "848ea1c6",
+   "id": "64ef625e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f148dff6",
+   "id": "fbcc9d77",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "302fad23",
+   "id": "00e65e72",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ea121a7e",
+   "id": "2322f009",
    "metadata": {},
    "outputs": [
     {
@@ -639,6 +639,54 @@
    "source": [
     "ufo_state = ufo_data.groupby('State').count()['City']\n",
     "ufo_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e2a704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import inspect\n",
+    "from config import db_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8044d5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create engine to connect database\n",
+    "engine = create_engine(f'{db_url}')\n",
+    "connection = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d88913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "\n",
+    "inspector.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d6deaa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sighting = pd.read_sql(\"SELECT * FROM sighting\",connection)\n",
+    "sighting"
    ]
   }
  ],
