--- a/Data/Sightings_State.ipynb
+++ b/Data/Sightings_State.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "64ef625e",
+   "execution_count": 5,
+   "id": "5f8776e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fbcc9d77",
+   "execution_count": 6,
+   "id": "7fa4ebe6",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[2060 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,8 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "00e65e72",
+   "execution_count": 7,
+   "id": "238c0552",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "[2059 rows x 13 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,125 +568,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2322f009",
+   "execution_count": 11,
+   "id": "7f495069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ufo_state = ufo_data.groupby('State').count()['City']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7c3a24fd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "State\n",
-       "AK      3\n",
-       "AL     28\n",
-       "AR     18\n",
-       "AZ     64\n",
-       "CA    203\n",
-       "CO     58\n",
-       "CT     35\n",
-       "DC      3\n",
-       "DE     11\n",
-       "FL    152\n",
-       "GA     35\n",
-       "HI      5\n",
-       "IA     14\n",
-       "ID     24\n",
-       "IL     58\n",
-       "IN     38\n",
-       "KS     12\n",
-       "KY     27\n",
-       "LA     21\n",
-       "MA     53\n",
-       "MD     31\n",
-       "ME     25\n",
-       "MI     50\n",
-       "MN     33\n",
-       "MO     42\n",
-       "MS     12\n",
-       "MT     18\n",
-       "NC     67\n",
-       "ND      2\n",
-       "NE      8\n",
-       "NH     24\n",
-       "NJ     54\n",
-       "NM     27\n",
-       "NV     26\n",
-       "NY    103\n",
-       "OH     75\n",
-       "OK     26\n",
-       "ON      1\n",
-       "OR     51\n",
-       "PA    113\n",
-       "RI     12\n",
-       "SC     30\n",
-       "SD      6\n",
-       "TN     37\n",
-       "TX     89\n",
-       "UT     22\n",
-       "VA     42\n",
-       "VT     16\n",
-       "WA     82\n",
-       "WI     49\n",
-       "WV     14\n",
-       "WY     10\n",
-       "Name: City, dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of UFO Sightings by State:\n",
+      "   State  Count\n",
+      "0     AK      3\n",
+      "1     AL     28\n",
+      "2     AR     18\n",
+      "3     AZ     64\n",
+      "4     CA    203\n",
+      "5     CO     58\n",
+      "6     CT     35\n",
+      "7     DC      3\n",
+      "8     DE     11\n",
+      "9     FL    152\n",
+      "10    GA     35\n",
+      "11    HI      5\n",
+      "12    IA     14\n",
+      "13    ID     24\n",
+      "14    IL     58\n",
+      "15    IN     38\n",
+      "16    KS     12\n",
+      "17    KY     27\n",
+      "18    LA     21\n",
+      "19    MA     53\n",
+      "20    MD     31\n",
+      "21    ME     25\n",
+      "22    MI     50\n",
+      "23    MN     33\n",
+      "24    MO     42\n",
+      "25    MS     12\n",
+      "26    MT     18\n",
+      "27    NC     67\n",
+      "28    ND      2\n",
+      "29    NE      8\n",
+      "30    NH     24\n",
+      "31    NJ     54\n",
+      "32    NM     27\n",
+      "33    NV     26\n",
+      "34    NY    103\n",
+      "35    OH     75\n",
+      "36    OK     26\n",
+      "37    ON      1\n",
+      "38    OR     51\n",
+      "39    PA    113\n",
+      "40    RI     12\n",
+      "41    SC     30\n",
+      "42    SD      6\n",
+      "43    TN     37\n",
+      "44    TX     89\n",
+      "45    UT     22\n",
+      "46    VA     42\n",
+      "47    VT     16\n",
+      "48    WA     82\n",
+      "49    WI     49\n",
+      "50    WV     14\n",
+      "51    WY     10\n"
+     ]
     }
    ],
    "source": [
-    "ufo_state = ufo_data.groupby('State').count()['City']\n",
-    "ufo_state"
+    "print(\"Count of UFO Sightings by State:\")\n",
+    "states = ufo_data.groupby(['State']).size().reset_index(name=\"Count\").sort_index(ascending=True)\n",
+    "print(states)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e2a704",
+   "id": "ab8fafcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy import inspect\n",
-    "from config import db_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8044d5e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create engine to connect database\n",
-    "engine = create_engine(f'{db_url}')\n",
-    "connection = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11d88913",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inspector = inspect(engine)\n",
-    "\n",
-    "inspector.get_table_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d6deaa1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sighting = pd.read_sql(\"SELECT * FROM sighting\",connection)\n",
-    "sighting"
+    "# write to csv file\n",
+    "states.to_csv('state_sightings.csv')"
    ]
   }
  ],
